Обновить клиент смены связей SQL-задания
