# src/api/sqlmodule/training/training.ts
@@ -1184,7 +1184,7 @@ export const getUpdateSqlTaskUrl = (id: string,) => {
 }
 
 /**
- * Обновляет название, текст, сложность и статус, кроме перехода в Published (FK не меняются). Для публикации используйте отдельную операцию. Возвращает 204 No Content. 400 — не прошла валидация. 404 — задание с указанным id не найдено. 409 — предпринята публикация через обычное обновление.
+ * Обновляет название, текст, сложность и статус, кроме перехода в Published. Тему и эталонный запрос можно изменить только у Draft-задания без попыток. Для публикации используйте отдельную операцию. Возвращает 204 No Content. 400 — не прошла валидация. 404 — задание с указанным id не найдено. 409 — предпринята публикация через обычное обновление.
  * @summary Обновить SQL-задание
  */
 export const updateSqlTask = async (id: string,
